Fixed gap between products

--- a/product_styling.css
+++ b/product_styling.css
@@ -51,7 +51,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 3rem;
+    gap: 1.5rem;
     background-color: #5EBC67;
 }
 .body-title h1 {
@@ -72,7 +72,9 @@
     justify-content: center;
     align-items: center;
     min-height: 50vh;
-    gap: 3rem;
+    gap: 1.5rem;
+    flex-wrap: wrap;
+    padding: 2rem;
 }
 .card {
     position: relative;
@@ -140,7 +142,6 @@
     height: 300px;
     object-fit: contain;
 }
-/* Footer */
 .footer { 
     font-family: 'Montserrat', sans-serif;
     background-color: rgb(12, 12, 12);
